# hw10_django

./: .gitignore
django_env/: pyproject.toml
django_env/hw_project/: manage.py  upld_data_to_db.py
django_env/hw_project/hw_project/: settings.py  urls.py
django_env/hw_project/quotes/: forms.py  models.py  urls.py  views.py
django_env/hw_project/quotes/static/quotes/: style.css
django_env/hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  base.html  index.html  tag_quotes.html
django_env/hw_project/quotes/util/: get_data.py
django_env/hw_project/users/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
django_env/hw_project/users/templates/: login.html  register.html
