[tool.poetry]
name = "django-env"
version = "0.1.0"
description = ""
authors = ["frederikibara <frederikibara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pymongo = "^4.10.1"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
